--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,8 @@
 MONGODB_URI=mongodb+srv://akshayachigullapally1:0jKRMZqQRjYyG5aq@cluster0.uqnycpq.mongodb.net/perma
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2025
 PORT=5000
+NODE_ENV=development
+SERVER_URL=http://localhost:5000
 
 FIREBASE_PROJECT_ID=perma-e97a8
 FIREBASE_CLIENT_EMAIL=firebase-adminsdk-fbsvc@perma-e97a8.iam.gserviceaccount.com
