--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,8 @@
 PORT=5000
 MONGODB_URI=mongodb://localhost:27017/perma
 JWT_SECRET=your_jwt_secret_here
+NODE_ENV=development
+SERVER_URL=http://localhost:5000
 
 # Firebase Admin SDK
 FIREBASE_PROJECT_ID=your_project_id_here
