--- a/server/.env
+++ b/server/.env
@@ -3,6 +3,7 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2025
 PORT=5000
 NODE_ENV=development
 SERVER_URL=http://localhost:5000
+CLIENT_URL=http://localhost:5173
 
 FIREBASE_PROJECT_ID=perma-e97a8
 FIREBASE_CLIENT_EMAIL=firebase-adminsdk-fbsvc@perma-e97a8.iam.gserviceaccount.com
