--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://perma-k6oi.onrender.com
 
 # Firebase Configuration - Replace with your actual values
 VITE_FIREBASE_API_KEY=AIzaSyBreiLV2SAfQueEaIOJVbgfzDlSeZzhxkg
