--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,7 @@ MONGODB_URI=mongodb+srv://akshayachigullapally1:0jKRMZqQRjYyG5aq@cluster0.uqnycp
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2025
 PORT=5000
 NODE_ENV=development
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://perma-topaz.vercel.app/
 
 FIREBASE_PROJECT_ID=perma-e97a8
 FIREBASE_CLIENT_EMAIL=firebase-adminsdk-fbsvc@perma-e97a8.iam.gserviceaccount.com
