--- a/client/.env
+++ b/client/.env
@@ -1,6 +1,6 @@
-VITE_API_URL=https://perma-k6oi.onrender.com
+VITE_API_URL=https://perma-k6oi.onrender.com/api
 
-# Firebase Configuration - Replace with your actual values
+# Firebase Configuration 
 VITE_FIREBASE_API_KEY=AIzaSyBreiLV2SAfQueEaIOJVbgfzDlSeZzhxkg
 VITE_FIREBASE_AUTH_DOMAIN=perma-e97a8.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=perma-e97a8
