--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 MONGODB_URI=mongodb+srv://akshayachigullapally1:0jKRMZqQRjYyG5aq@cluster0.uqnycpq.mongodb.net/perma
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2025
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 CLIENT_URL=https://perma-topaz.vercel.app
 
 FIREBASE_PROJECT_ID=perma-e97a8
